basic setup for product

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
     </div>
     <div class="container" id="body-container">
         <div class="row">
-          <div class="span9">
+          <div class="span9" id="body-content">
              <%= yield %>
           </div>
           <div class="span3">
