--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,30 @@
 #body-container{
   padding-top:80px;
 }
+.right{
+  float:right;
+}
+.product{
+  width:140px;
+  float:left;
+  margin:5px;
+  
+  img{
+    width:100px;
+    height:100px;
+    padding:20px;
+    margin-bottom:10px;
+  }
+  .buy{
+    width:100px;
+    height:25px;
+    padding:0px 20px;
+  }
+  .name{
+    font-weight: bold;
+    text-align:center;
+  }
+  .price{
+    float:right;
+  }
+}
